# Proxy4Tun

./: .gitignore  README.md  pyproject.toml  requirements.txt
.cursor/: Dockerfile  environment.json
agents/: README.md
anchors/: NOTEBOOK_ANCHOR_PARITY.md  README.md
bo/: README.md  archive-pooled-experiment.md  blocks.py  family_proxy.py  param_io.py  run_bo.py  run_holdout.py  spaces.py
bo-elegant/: README.md  ablation_harness_gate.md  ablation_study.py  build_registry.py  features.py  fill_to_n.py  registry.json  report.md  run_missing.py  run_trials.py  sanity_and_gate.py  score_holdouts.py  score_holdouts_v2.py  t3_review.md  train_proxy.py  train_proxy_v2.py  validation_gate.md  validation_gate_3-6.md  validation_gate_trials.md
bo-unified/: README.md  ablation.md  ablation.py  family_proxy.py  ingest.py  intrinsics.py  param_io.py  phase_check.py  pipeline.py  reflect_pilot.py  report.md  run_bo.py  run_holdout.py  spaces.py
ontology/: README.md  sam4tun_functional_ontology.yaml  sam4tun_ontology.yaml  tunnel_priors.yaml
reports/: anchors-summary.md  critical-parameters-experiment.md  orientation-sensitivity.md  t3-3-1-1-corrected-vs-literal.md  t45-4-1-swap-ab.md  t45-5-1-depth-improvement.md  unified.md
sam4tun/: 1_upfolding.py  2_denoising.py  3_enhancing.py  4_detection.py  5_sam.py  6_evaluation.py  README.md  SAM4Tun.py  __init__.py  config.py  io.py  pipeline.py  state.py
scripts/: extract_t3_subsets.py  run_cleanup_verify.sh
tests/: test_pipeline_runtime.py  test_pipeline_units.py  test_t3_runtime.py  test_t45_runtime.py
(+235 files in other folders)
